--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-events.file-name = C:/Users/AIT TR Student/IdeaProjects/Backend/Spring/api-REST-event/events.txt
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=qwerty007
+spring.datasource.url=jdbc:h2:file:~/databases/test_db;AUTO_SERVER=TRUE
+
+spring.h2.console.enabled=true
